--- a/premedia/site/index.html
+++ b/premedia/site/index.html
@@ -51,7 +51,7 @@
 			<div class="position-relative hamburger" onclick="toggleMenu()">menu</div>
 		</div>
 	</header>
-	<div class="snap-container vh-100">
+	<div class="snap-container mandatory vh-100">
 		<div class="snap-point">
 			<div class="section bg-dark d-flex ">
 				<div class="container d-flex flex-column justify-content-between align-self-stretch">
