--- a/premedia/site/index.html
+++ b/premedia/site/index.html
@@ -49,7 +49,7 @@
 	<div class="menu-underlay bg-email position-fixed no-touching"></div>
 	<header class="navbar fixed-top px-5 text-white">
 		<div class="navbar-section">
-			<h2 class="mb-0">Vakils</h2>
+			<img id="logo" class="dark" src="./img/vakils-logo-b.png">
 		</div>
 		<div class="navbar-section">
 			<div class="position-relative">
@@ -122,7 +122,7 @@
 		</div>
 	</div>
 	<div class="services section" data-anim="-">
-		<div class="psuedo-section"><div data-child="wipe-in-right" class="half bg-email"></div></div>
+		<div class="psuedo-section"><div id="hi" data-child="wipe-in-right" class="half bg-email"></div></div>
 		<div class="container d-flex flex-center">
 			<div class="row flex-row-reverse">
 				<div class="col-12 col-md-6">
